# ROStrojan

./: .gitignore  CMakeLists.txt  README.md  file_mng.h  main.c  system_info.h
client/: CMakeLists.txt
client/src/: main.c  main_process.c  main_process.h  sender_process.c  sender_process.h
lib/: env_mng.c  env_mng.h  file_mng.c  shm_mng.c
server/: CMakeLists.txt
server/src/: cleaner_process.c  cleaner_process.h  listener_process.c  listener_process.h  main.c  main_process.c  main_process.h  sem_mng.c  sem_mng.h  shm_mng.c  shm_mng.h  shm_utils.c  shm_utils.h  sig_mng.c  sig_mng.h
src/: algo  env_mng.c  env_mng.h  file_mng.c  file_mng.h  help.c  help.h  main.c  system_info.c  system_info.h  tests.c  tests.h
test/: lista-barcenas.txt  test.sh
